# PyMassSpec-Plot

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  formate.toml  notebook2rst.py  pyproject.toml  regen_mpl_baseline.sh  repo_helper.yml  requirements.txt  setup.cfg  setup.py  sort_hashes_json.py  tox.ini
.github/: actions_build_conda.sh  actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  mypy.yml  notebooks.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
demo/jupyter/: Display_User_Interaction.ipynb  Displaying_Detected_Peaks.ipynb  Displaying_Mass_Spec.ipynb  Displaying_Multiple_IC.ipynb  Displaying_TIC.ipynb
demo/scripts/: Display_User_Interaction.py  Displaying_Detected_Peaks.py  Displaying_Mass_Spec.py  Displaying_Multiple_IC.py  Displaying_TIC.py
doc-source/: Source.rst  api.rst  conf.py  contributing.rst  index.rst  license.rst  migration.rst  requirements.txt
doc-source/_static/: style.css
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: PyMassSpec-Plot.rst
doc-source/demo_rst/: Display_User_Interaction.rst  Displaying_Detected_Peaks.rst  Displaying_Mass_Spec.rst  Displaying_Multiple_IC.rst  Displaying_TIC.rst
doc-source/examples/: Display_User_Interaction.rst  Displaying_Detected_Peaks.rst  Displaying_Mass_Spec.rst  Displaying_Multiple_IC.rst  Displaying_TIC.rst  index.rst
pymassspec_plot/: __init__.py  utils.py
tests/: conftest.py  constants.py  image_hashes.json  image_hashes_313.json  image_hashes_38.json  image_hashes_39.json  requirements.txt  test_plot.py  test_utils.py
tests/test_plot_/: test_click_event_handler.txt
tests/test_utils_/: test_invert_mass_spec.yml
