[build-system]
build-backend = "whey"
requires = [ "whey",]

[project]
name = "PyMassSpec-Plot"
version = "0.0.0"
description = "Plotting extension for PyMassSpec."
readme = "README.rst"
keywords = [ "chemistry", "chromatography", "mass-spectrometry", "visualization",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/PyMassSpec/PyMassSpec-Plot"
"Issue Tracker" = "https://github.com/PyMassSpec/PyMassSpec-Plot/issues"
"Source Code" = "https://github.com/PyMassSpec/PyMassSpec-Plot"
Documentation = "https://pymassspec-plot.readthedocs.io/en/latest"

[tool.mkrecipe]
conda-channels = [ "bioconda", "conda-forge", "domdfcoding",]
extras = "all"
license-key = "GPL-2.0-only"
package = "pymassspec_plot"

[tool.whey]
base-classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "GPL-2.0-only"
package = "pymassspec_plot"

[tool.dep_checker.name_mapping]
pymassspec = "pyms"
